objects/Online_Class__c.object
<CustomObject>
    <description>object used to hold classes offered online</description>
    <fields>
        <fullName>Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class</label>
        <referenceTo>Classes__c</referenceTo>
        <relationshipLabel>Online Classes</relationshipLabel>
        <relationshipName>Online_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <description>Calculates the day of the week this Online Class took place</description>
        <formula>CASE(MOD( DATEVALUE(Start_Day_and_Time_del__c) - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</formula>
        <label>Day of the Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Day_and_Time_del__c</fullName>
        <label>End Day and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name_of_Class__c</fullName>
        <label>Name of Class</label>
        <picklist>
            <picklistValues>
                <fullName>Admin Activity Alerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Checklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Desking Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Lead Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Templates and Sales Processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic CRM Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic ILM Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner Admin 1 of 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner Admin 2 of 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CraigsList and Ebay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Desking and Trade Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory / DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MobileSnap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator&apos;s Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesperson 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesperson 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinCamera</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Day_and_Time_del__c</fullName>
        <label>Start Day and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_del__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Schedule</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled: Tech Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled: No Registers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled: No Shows</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Online_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UsedForCount__c</fullName>
        <description>A simple entry used for an artificial Record Count in reporting.</description>
        <formula>1</formula>
        <label>UsedForCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sessionKey__c</fullName>
        <inlineHelpText>session key set by WebEx</inlineHelpText>
        <label>sessionKey</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sessionName__c</fullName>
        <inlineHelpText>Session Name used in the API</inlineHelpText>
        <label>Session Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sessionTrainerAlias__c</fullName>
        <inlineHelpText>session trainer alias</inlineHelpText>
        <label>sessionTrainerAlias</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Online Class</label>
    <listViews>
        <fullName>Admin_Classes</fullName>
        <columns>Name_of_Class__c</columns>
        <columns>Trainer_del__c</columns>
        <columns>Status_del__c</columns>
        <columns>Start_Day_and_Time_del__c</columns>
        <columns>Private__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name_of_Class__c</field>
            <operation>contains</operation>
            <value>Admin,service,GM</value>
        </filters>
        <filters>
            <field>Start_Day_and_Time_del__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>All Admin Classes: Last 14 Days</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name_of_Class__c</columns>
        <columns>Class__c</columns>
        <columns>Private__c</columns>
        <columns>Start_Day_and_Time_del__c</columns>
        <columns>Status_del__c</columns>
        <columns>Trainer_del__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Online_Classes_Completed_or_Cancelled</fullName>
        <columns>Class__c</columns>
        <columns>NAME</columns>
        <columns>Name_of_Class__c</columns>
        <columns>Status_del__c</columns>
        <columns>Trainer_del__c</columns>
        <columns>Private__c</columns>
        <columns>Start_Day_and_Time_del__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Day_and_Time_del__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>All Classes: Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Online_Classes_Scheduled_Only</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Start_Day_and_Time_del__c</columns>
        <columns>Status_del__c</columns>
        <columns>Trainer_del__c</columns>
        <columns>Private__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_del__c</field>
            <operation>equals</operation>
            <value>Schedule</value>
        </filters>
        <label>Online Classes Scheduled Only</label>
    </listViews>
    <listViews>
        <fullName>Private_Classes</fullName>
        <columns>Start_Day_and_Time_del__c</columns>
        <columns>NAME</columns>
        <columns>Trainer_del__c</columns>
        <columns>Status_del__c</columns>
        <columns>Private__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Private__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Start_Day_and_Time_del__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>All Private Classes: Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Salesmen_Classes</fullName>
        <columns>Name_of_Class__c</columns>
        <columns>Trainer_del__c</columns>
        <columns>Status_del__c</columns>
        <columns>Private__c</columns>
        <columns>Start_Day_and_Time_del__c</columns>
        <columns>NAME</columns>
        <columns>sessionName__c</columns>
        <columns>Class__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Name_of_Class__c</field>
            <operation>contains</operation>
            <value>Distribution,MobileSnap,Salesperson 1,Salesperson 2</value>
        </filters>
        <label>Salesmen Classes</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Classes</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Start_Day_and_Time_del__c</columns>
        <columns>Trainer_del__c</columns>
        <columns>Status_del__c</columns>
        <columns>Private__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Day_and_Time_del__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Classes</label>
    </listViews>
    <listViews>
        <fullName>Total_Classes_Completed</fullName>
        <columns>Name_of_Class__c</columns>
        <columns>Class__c</columns>
        <columns>NAME</columns>
        <columns>Status_del__c</columns>
        <columns>Trainer_del__c</columns>
        <columns>Start_Day_and_Time_del__c</columns>
        <columns>Private__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_del__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Start_Day_and_Time_del__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Total Classes Completed Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Yesterday_s_Classes</fullName>
        <columns>Start_Day_and_Time_del__c</columns>
        <columns>Name_of_Class__c</columns>
        <columns>Status_del__c</columns>
        <columns>Trainer_del__c</columns>
        <columns>Private__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Day_and_Time_del__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday&apos;s Classes</label>
    </listViews>
    <nameField>
        <label>Online Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Online Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>